--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,17 @@
       name="description"
       content="Roman's Website"
     />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CW15MJKQ9Y"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CW15MJKQ9Y');
+    </script>
+
     <link rel="apple-touch-icon" href="smiley.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
