--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
     <link rel="icon" href="computer.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Roman's Website"
-    />
+    <meta name="description" content="Roman's Website"/>
+    <meta property="og:title" content="Roman Bellisari" />
+    <meta property="og:description" content="Not much to see here, just Roman's website. May eventually use this for something cool one day." />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CW15MJKQ9Y"></script>
